--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,79 @@
 div {
     padding: 20px 20px 20px 20px;
-    background-color: rgb(233, 193, 193);
-    position: absolute;
+    background-color: #ffffff;
+    position: fixed;
     width: 960px;
     text-align: left;
     height: 400px;
+    margin: 50px 100px 50px 100px;
+    border: solid 5px #dddddd;
+}
+
+#myname {
+    float: left;
+    width: 15%;
+    background-color: #4aaaa5;
+    Color: white;
+    text-align: center;
+    padding: 20px;
+    height: 50px;
+    bottom: 0;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    font-size: 20px;
 }
 
 h1 {
     color: #4aaaa5;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
+/*need to fix*/
+body {
+    background-image: url(hotel-wallpaper.jpg);
+    background-color: rgb(156, 178, 201);
+}
 
 p {
     text-align: left; 
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    float: left;
+    color: #777777
+}
+
+img {
+    float: left;
 }
 
 footer {
     width: 100%;
     position: sticky;
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #666666;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: white;
+    border-top: solid 10px #4aaaa5;
+
 }
 
-ul {
+#nav1 {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: rgb(240, 240, 191);
+    background-color: #ffffff;
     text-align: right;
-    height:50px; 
-    width: 960px;
+    height:10%; 
+    width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
+    border: #cccccc;
+    border-width: 5px;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
 li {
@@ -40,5 +82,13 @@ li {
 }
 
 .active {
-    background-color: rgb(159, 163, 159);
+    background-color: white;
+    width: 10%;
+    height: 50px;
+    color: lightgray;
+    text-decoration: none;
+}
+
+#boarder {
+    border-right: solid 1px rgb(112, 111, 111);
 }
