--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,32 @@
-div {
+.maininfo {
     padding: 20px 20px 20px 20px;
     background-color: #ffffff;
-    position: fixed;
+    position: static;
     width: 960px;
     text-align: left;
     height: 400px;
-    margin: 50px 100px 50px 100px;
+    margin: 0 auto;
+    margin-top: 100px;
     border: solid 5px #dddddd;
+    overflow: auto;
+}
+
+.nav1 {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    text-align: right;
+    height:10%; 
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border-bottom: solid 5px #cccccc;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
 #myname {
-    float: left;
     width: 15%;
     background-color: #4aaaa5;
     Color: white;
@@ -18,29 +34,47 @@ div {
     padding: 20px;
     height: 50px;
     bottom: 0;
+    left: 0;
+    top: 0;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
     font-size: 20px;
+    overflow: auto;
+}
+
+.active {
+    background-color: white;
+    padding: 20px;
+    color: rgb(207, 204, 204);
+    text-decoration: none;
+}
+
+li {
+    display: inline;
+    padding: 10px 20px 20px 20px;
+    border-right:solid 1px rgb(32, 30, 30);
+}
+a:hover {
+    background-color: rgb(240, 240, 240);
 }
 
 h1 {
     color: #4aaaa5;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
-/*need to fix*/
+/*need to change to not C drive*/
 body {
-    background-image: url(hotel-wallpaper.jpg);
-    background-color: rgb(156, 178, 201);
+    background-image: URL(C:\Users\Hayley Budzinski\Portfolio\Portfolio\hotel-wallpaper.png);
+}
+
+img.floatleft {
+    float: left;
+    margin: 4px;
 }
 
 p {
-    text-align: left; 
+    text-align: none; 
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    float: left;
     color: #777777
-}
-
-img {
-    float: left;
 }
 
 footer {
@@ -55,40 +89,56 @@ footer {
     height: 50px;
     text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 12px;
     color: white;
     border-top: solid 10px #4aaaa5;
-
 }
 
-#nav1 {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #ffffff;
-    text-align: right;
-    height:10%; 
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border: #cccccc;
-    border-width: 5px;
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-}
-
-li {
-    display: inline;
-    padding: 10px 20px 20px 20px;
-}
-
-.active {
-    background-color: white;
-    width: 10%;
-    height: 50px;
-    color: lightgray;
-    text-decoration: none;
-}
-
-#boarder {
+#border {
     border-right: solid 1px rgb(112, 111, 111);
+}
+
+#name, #email {
+    width: 900px;
+}
+
+#message {
+    width: 900px;
+    height: 180px;
+}
+
+.container {
+    position: relative;
+    border: solid 5px pink;
+    width: 200px;
+    height:200px;
+    float: left;
+    margin: 10px;
+}
+
+.box{
+    position: absolute;
+    display: inline;
+}
+
+.a {
+    top: 50px;
+    border: solid 1px black;
+}
+.b {
+    top: 50px;
+	border: solid 1px blue;
+}
+.c {
+    top: 50px;
+	border: solid 1px yellow;
+ 
+}
+.d {
+    top: 50px;
+	border: solid 1px chocolate;
+}
+.e {
+    top: 50px;
+	border: solid 1px lightgreen;
 }
