--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-image:  ;
+}
+
 .maininfo {
     padding: 20px 20px 20px 20px;
     background-color: #ffffff;
@@ -117,28 +121,65 @@ footer {
 }
 
 .box{
-    position: absolute;
     display: inline;
 }
 
 .a {
-    top: 50px;
-    border: solid 1px black;
+    bottom: 20px;
+    width: 200px;
+    height: 50px;
+    background-color:  #4aaaa5;
+    text-align: center;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    color: white;
+    position: absolute;
+
 }
+
+.a1 {
+    width: 200px;
+    height:200px;
+}
+
 .b {
-    top: 50px;
-	border: solid 1px blue;
+    bottom: 20px;
+    width: 200px;
+    height: 50px;
+    background-color:  #4aaaa5;
+    text-align: center;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    color: white;
+    position: absolute;
 }
 .c {
-    top: 50px;
-	border: solid 1px yellow;
- 
+    bottom: 20px;
+    width: 200px;
+    height: 50px;
+    background-color:  #4aaaa5;
+    text-align: center;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    color: white;
+    position: absolute;
 }
+
 .d {
-    top: 50px;
-	border: solid 1px chocolate;
+    bottom: 20px;
+    width: 200px;
+    height: 50px;
+    background-color:  #4aaaa5;
+    text-align: center;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    color: white;
+    position: absolute;
 }
+
 .e {
-    top: 50px;
-	border: solid 1px lightgreen;
+    bottom: 20px;
+    width: 200px;
+    height: 50px;
+    background-color:  #4aaaa5;
+    text-align: center;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    color: white;
+    position: absolute;
 }
