--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,19 @@
 body {
-    background-image:  ;
+    background-image: url("../images/hotel-wallpaper.png");
+    margin: 0;
+    overflow: scroll;
+    position: relative;
 }
 
 .maininfo {
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     background-color: #ffffff;
     position: static;
     width: 960px;
     text-align: left;
-    height: 400px;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom:100px;
     border: solid 5px #dddddd;
     overflow: auto;
 }
@@ -18,12 +21,12 @@ body {
 .nav1 {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    overflow: hidden;
     background-color: #ffffff;
     text-align: right;
-    height:10%; 
-    width: 100%;
-    position: fixed;
+    width: calc(100% - 20px);
+    position: relative;
     top: 0;
     left: 0;
     border-bottom: solid 5px #cccccc;
@@ -35,11 +38,15 @@ body {
     background-color: #4aaaa5;
     Color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     height: 50px;
     bottom: 0;
     left: 0;
     top: 0;
+    margin-left: 86px;
+    margin-top: auto;
+    float: left;
+    position: absolute;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
     font-size: 20px;
     overflow: auto;
@@ -54,9 +61,13 @@ body {
 
 li {
     display: inline;
-    padding: 10px 20px 20px 20px;
-    border-right:solid 1px rgb(32, 30, 30);
 }
+
+#littlelines {
+    border-right: solid 2px rgb(192, 192, 192);
+    border-left: solid 2px  rgb(192, 192, 192);
+}
+
 a:hover {
     background-color: rgb(240, 240, 240);
 }
@@ -64,10 +75,6 @@ a:hover {
 h1 {
     color: #4aaaa5;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-}
-/*need to change to not C drive*/
-body {
-    background-image: URL(C:\Users\Hayley Budzinski\Portfolio\Portfolio\hotel-wallpaper.png);
 }
 
 img.floatleft {
@@ -83,10 +90,8 @@ p {
 
 footer {
     width: 100%;
-    position: sticky;
-    margin: 0;
-    position: absolute;
     bottom: 0;
+    margin: 0;
     left: 0;
     background-color: #666666;
     width: 100%;
@@ -95,7 +100,7 @@ footer {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 12px;
     color: white;
-    border-top: solid 10px #4aaaa5;
+    border-top: solid 5px #4aaaa5;
 }
 
 #border {
@@ -113,7 +118,6 @@ footer {
 
 .container {
     position: relative;
-    border: solid 5px pink;
     width: 200px;
     height:200px;
     float: left;
@@ -124,10 +128,11 @@ footer {
     display: inline;
 }
 
-.a {
+.a, .b, .c, .d, .e {
     bottom: 20px;
     width: 200px;
     height: 50px;
+    padding-top: 20px;
     background-color:  #4aaaa5;
     text-align: center;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
@@ -136,50 +141,4 @@ footer {
 
 }
 
-.a1 {
-    width: 200px;
-    height:200px;
-}
 
-.b {
-    bottom: 20px;
-    width: 200px;
-    height: 50px;
-    background-color:  #4aaaa5;
-    text-align: center;
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    color: white;
-    position: absolute;
-}
-.c {
-    bottom: 20px;
-    width: 200px;
-    height: 50px;
-    background-color:  #4aaaa5;
-    text-align: center;
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    color: white;
-    position: absolute;
-}
-
-.d {
-    bottom: 20px;
-    width: 200px;
-    height: 50px;
-    background-color:  #4aaaa5;
-    text-align: center;
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    color: white;
-    position: absolute;
-}
-
-.e {
-    bottom: 20px;
-    width: 200px;
-    height: 50px;
-    background-color:  #4aaaa5;
-    text-align: center;
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    color: white;
-    position: absolute;
-}
