--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,9 @@ body {
     background-color: #4aaaa5;
     Color: white;
     text-align: center;
-    padding: 10px;
+    padding-top: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
     height: 50px;
     bottom: 0;
     left: 0;
